websocket  sockJS  spring message

--- a/50_spring-boot/400_websocket/src/main/resources/templates/ws.html
+++ b/50_spring-boot/400_websocket/src/main/resources/templates/ws.html
@@ -18,9 +18,10 @@
         <p id="response"></p>
     </div>
 </div>
-<script th:src="@{sockjs.min.js}"></script>
-<script th:src="@{stomp.min.js}"></script>
-<script th:src="@{jquery.js}"></script>
+
+<script src="/webjars/jquery/jquery.min.js"></script>
+<script src="/webjars/sockjs-client/sockjs.min.js"></script>
+<script src="/webjars/stomp-websocket/stomp.min.js"></script>
 <script type="text/javascript">
     var stompClient = null;
 
